se agregan reportes mensuales y quincenales

--- a/app/views/supervisor/analytics.html.erb
+++ b/app/views/supervisor/analytics.html.erb
@@ -115,7 +115,7 @@
           </section>
           <div id="reportes-container" class="clearfix">
 
-            <!-- USUARIOS -->
+            <!-- USUARIOS SEMANAL -->
 
             <div class="element usuarios Enero-2013" > 
               <p> Usuarios</p>
@@ -165,7 +165,35 @@
               <p>13 al 20 de diciembre</p>
             </div>
 
-            <!-- POSTS -->
+            <!-- USUARIOS QUINCENALES -->
+
+            <div class="element usuarios quincenal Enero-2013" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20130101-20130115.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de enero</p>
+            </div>
+
+            <div class="element usuarios quincenal Diciembre-2012" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20121215-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de diciembre</p>
+            </div>
+
+            <!-- USUARIOS MENSUALES -->
+
+            <div class="element usuarios mensual Diciembre-2012" >
+              <p> Usuarios</p>
+              <a href="http://50.116.21.144/users-20121212-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>12 al 31 de diciembre</p>
+            </div>
+
+            <!-- POSTS SEMANALES -->
 
             <div class="element posts Enero-2013" > 
               <p> Posts</p>
@@ -215,7 +243,35 @@
               <p>13 al 20 de diciembre</p>
             </div>
 
-            <!-- LOGINS -->
+            <!-- POSTS QUINCENALES -->
+
+            <div class="element posts quincenal Enero-2013" >
+              <p> Posts </p>
+              <a href="http://50.116.21.144/posts-20130101-20130115.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de enero</p>
+            </div>
+
+            <div class="element posts quincenal Diciembre-2012" >
+              <p> Posts </p>
+              <a href="http://50.116.21.144/posts-20121215-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de diciembre</p>
+            </div>
+
+            <!-- POSTS MENSUALES -->
+
+            <div class="element posts mensual Diciembre-2012" >
+              <p> Posts </p>
+              <a href="http://50.116.21.144/posts-20121212-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>12 al 31 de diciembre</p>
+            </div>
+
+            <!-- LOGINS SEMANALES -->
 
             <div class="element logins Enero-2013" > 
               <p> Logins </p>
@@ -265,7 +321,35 @@
               <p>13 al 20 de diciembre</p>
             </div>
 
-            <!-- DISPOSITIVOS -->
+            <!-- LOGINS QUINCENALES -->
+
+            <div class="element logins quincenal Enero-2013" >
+              <p> Logins</p>
+              <a href="http://50.116.21.144/logins-20130101-20130115.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de enero</p>
+            </div>
+
+            <div class="element logins quincenal Diciembre-2012" >
+              <p> Logins</p>
+              <a href="http://50.116.21.144/logins-20121215-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de diciembre</p>
+            </div>
+
+            <!-- LOGINS MENSUALES -->
+     
+            <div class="element logins mensual Diciembre-2012" >
+              <p> Logins</p>
+              <a href="http://50.116.21.144/logins-20121212-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>12 al 31 de diciembre</p>
+            </div>
+
+            <!-- DISPOSITIVOS SEMANAL -->
 
             <div class="element dispositivos Enero-2013" > 
               <p> Dispositivos</p>
@@ -313,6 +397,34 @@
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
               <p>13 al 20 de diciembre</p>
+            </div>
+
+            <!-- DISPOSITIVOS QUINCENAL -->
+ 
+            <div class="element dispositivos quincenal Enero-2013" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20130101-20130115.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de enero</p>
+            </div>
+
+            <div class="element dispositivos quincenal Diciembre-2012" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20121215-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de diciembre</p>
+            </div>
+
+            <!-- DISPOSITIVOS MENSUAL -->
+ 
+            <div class="element dispositivos mensual Diciembre-2012" >
+              <p> Dispositivos</p>
+              <a href="http://50.116.21.144/devices-20121212-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>12 al 31 de enero</p>
             </div>
 
             <!-- POST/COMENTARIOS -->
@@ -363,6 +475,34 @@
                 <img src="/assets/report.png" alt="Image" width="64px"/>
               </a>
               <p>13 al 20 de diciembre</p>
+            </div>
+
+            <!-- POST/COMENTARIOS QUINCENAL -->
+
+            <div class="element post_comentarios quincenal Enero-2013" >
+              <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20130101-20130115.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>01 al 15 de enero</p>
+            </div>
+
+            <div class="element post_comentarios quincenal Diciembre-2012" >
+              <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20121215-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>15 al 31 de diciembre</p>
+            </div>
+
+            <!-- POST/COMENTARIOS MENSUAL -->
+  
+            <div class="element post_comentarios mensual Diciembre-2012" >
+              <p> Post/Comentarios</p>
+              <a href="http://50.116.21.144/most_commented-20121212-20121231.csv">
+                <img src="/assets/report.png" alt="Image" width="64px"/>
+              </a>
+              <p>12 al 31 de diciembre</p>
             </div>
 
             <!-- QUIZZES -->
